--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,6 @@
 // Variables
-
+$variable-prefix: mo-;
+$prefix: $variable-prefix;
 //
 // custom-variables
 //
@@ -69,8 +70,8 @@ $font-weight-semibold: 600;
 $apex-grid-color: #f8f9fa;
 
 // table
-$table-head-bg:               $gray-100;
-$table-dark-border-color:     tint-color($gray-800, 7.5%);
+// $table-head-bg:               $gray-100;
+// $table-dark-border-color:     tint-color($gray-800, 7.5%);
 
 
 // Variables
@@ -168,7 +169,7 @@ $theme-colors: (
 // scss-docs-end theme-colors-map
 
 // scss-docs-start theme-colors-rgb
-$theme-colors-rgb: map-loop($theme-colors, to-rgb, "$value");
+// $theme-colors-rgb: map-loop($theme-colors, to-rgb, "$value");
 // scss-docs-end theme-colors-rgb
 // The contrast ratio to reach against white, to determine if color changes from "light" to "dark". Acceptable values for WCAG 2.0 are 3, 4.5 and 7.
 // See https://www.w3.org/TR/WCAG20/#visual-audio-contrast-contrast
@@ -431,8 +432,8 @@ $enable-important-utilities:  true;
 
 // Prefix for :root CSS variables
 
-$variable-prefix:             bs-; // Deprecated in v5.2.0 for the shorter `$prefix`
-$prefix:                      $variable-prefix;
+// $variable-prefix:             bs-; // Deprecated in v5.2.0 for the shorter `$prefix`
+// $prefix:                      $variable-prefix;
 
 
 // Gradient
@@ -460,7 +461,7 @@ $spacers: (
   5: $spacer * 3,
 );
 
-$negative-spacers: if($enable-negative-margins, negativify-map($spacers), null);
+// $negative-spacers: if($enable-negative-margins, negativify-map($spacers), null);
 // scss-docs-end spacer-variables-maps
 
 // Position
@@ -520,8 +521,8 @@ $grid-breakpoints: (
 );
 // scss-docs-end grid-breakpoints
 
-@include _assert-ascending($grid-breakpoints, "$grid-breakpoints");
-@include _assert-starts-at-zero($grid-breakpoints, "$grid-breakpoints");
+// @include _assert-ascending($grid-breakpoints, "$grid-breakpoints");
+// @include _assert-starts-at-zero($grid-breakpoints, "$grid-breakpoints");
 
 
 // Grid containers
@@ -538,7 +539,7 @@ $container-max-widths: (
 );
 // scss-docs-end container-max-widths
 
-@include _assert-ascending($container-max-widths, "$container-max-widths");
+// @include _assert-ascending($container-max-widths, "$container-max-widths");
 
 
 // Grid columns
@@ -1149,7 +1150,8 @@ $nav-tabs-border-width:             $border-width;
 $nav-tabs-border-radius:            $border-radius;
 $nav-tabs-link-hover-border-color:  $gray-200 $gray-200 $nav-tabs-border-color;
 $nav-tabs-link-active-color:        $gray-700;
-$nav-tabs-link-active-bg:           $card-bg;
+// $nav-tabs-link-active-bg:           $card-bg;
+$nav-tabs-link-active-bg:           $white;
 $nav-tabs-link-active-border-color: $gray-400 $gray-400 $nav-tabs-link-active-bg;
 
 $nav-pills-border-radius:           $border-radius;
