--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -2,6 +2,7 @@
     position: fixed;
     left: 250px;
     width: 100%;
+    box-shadow: 0 0.75rem 1.5rem rgba(18,38,63,.03);
     
     .headerNav{
         height: 70px;
