--- a/src/components/Sidebar/sidebar.scss
+++ b/src/components/Sidebar/sidebar.scss
@@ -1,49 +1,53 @@
+.sidebar {
+  background: #2a3042;
+  bottom: 0;
+  box-shadow: 0 0.75rem 1.5rem rgba(18, 38, 63, 0.03);
+  margin-top: 0;
+  padding-top: 70px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 250px;
+  z-index: 1001;
+  cursor: pointer;
 
-.sidebar{
-background:    #2a3042;
- bottom:0;
- box-shadow:0 .75rem 1.5rem rgba(18,38,63,.03);
- margin-top:0;
- padding-top:70px;
- position:fixed;
- top:0;
- left: 0;
- width:250px;
- z-index:1001;
- cursor: pointer;
- 
-    ul{
-        display: flex;
-        flex-direction: column;
-        list-style: none;
+  ul {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+  }
+  li {
+    span:hover {
+      color: aliceblue;
+      transition: color 0.5s;
     }
-    li{
-        span:hover{
-             color: aliceblue;
-             transition: color 0.5s;
-        }
-    }
-    .menu_title {
-        font-size: 11px;
-        color: #6a7187;
-        padding: 12px 20px;
-    }
-    .menu_content{
-        font-size: 13px;
-        color: #a6b0cf;
-        display: flex;
-        flex-direction: column;
-        padding: 0px 20px;
+  }
+  .menu_title {
+    font-size: 11px;
+    color: #6a7187;
+    padding: 12px 20px;
+  }
+  .menu_content {
+    font-size: 13px;
+    color: #a6b0cf;
+    display: flex;
+    flex-direction: column;
+    padding: 0px 20px;
 
-        span,a{
-            padding: .625rem 1.5rem;
-            width: 100%;
-        }
-
-        ul{
-            li {
-                padding: 8px 20px;
-            }
-        }
+    a {
+      padding: 0.625rem 1.5rem;
+      width: 100%;
     }
+    span {
+      @extend a;
+      display: flex;
+      justify-content: space-between;
+    }
+
+    ul {
+      li {
+        padding: 8px 20px;
+      }
+    }
+  }
 }
