--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,12 +1,95 @@
 .pageHeader {
-    position: fixed;
-    left: 250px;
-    width: 100%;
-    box-shadow: 0 0.75rem 1.5rem rgba(18,38,63,.03);
-    
-    .headerNav{
+  background-color: #fff;
+  box-shadow: 0 0.75rem 1.5rem rgba(18, 38, 63, 0.03);
+  left: 250px;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 1002;
+
+  .navBarHeader {
+    align-items: center;
+    display: flex;
+    height: 70px;
+    justify-content: space-between;
+    margin: 0 auto;
+    padding: 0 12px 0 0;
+    .dflex {
+      display: flex !important;
+
+      button:not(:disabled) {
+        cursor: pointer;
+      }
+
+      .btn {
+        font-size: 16px !important;
+        border: 0;
+        border-radius: 0;
+        box-shadow: none !important;
         height: 70px;
+        padding-left: 1rem !important;
+        padding-right: 1rem !important;
         background-color: #fff;
-        
+        color: #555b6d;
+      }
+
+      .bell {
+        display: inline-block !important;
+        position: relative;
+        color: #495057;
+        padding: 7.52px 12px 7.52px 12px;
+
+        button {
+          color: #555b6d;
+          background-color: #fff;
+          border: 0;
+          border-radius: 0;
+          box-shadow: none !important;
+          height: 70px;
+          position: relative !important;
+          user-select: none;
+          vertical-align: middle;
+
+          svg {
+            font-size: 22px;
+            color: #555b6d;
+          }
+        }
+      }
+
+      .profile {
+        display: inline-block !important;
+        position: relative;
+        color: #495057;
+        padding: 7.52px 12px 7.52px 12px;
+        .dropdown {
+          color: #555b6d;
+          border: 0;
+          border-radius: 0;
+          box-shadow: none !important;
+          height: 70px;
+          user-select: none;
+          vertical-align: middle;
+          background-color: #fff;
+
+          .header-profile-user {
+            background-color: #fff;
+            height: 36px;
+            padding: 3px;
+            width: 36px;
+            border-radius: 50%;
+            .role {
+              display: inline-block !important;
+              margin-left: 0.5rem !important;
+              margin-right: 0.25rem !important;
+
+              svg {
+                display: inline-block !important;
+              }
+            }
+          }
+        }
+      }
     }
+  }
 }
