--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,9 +1,9 @@
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
+    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
+    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -85,18 +85,18 @@ body {
   overflow-x: hidden;
 }
 
-body{
+body {
   background-color: #f8f8fb;
 }
 
 body {
-//   color: rgb(var(--foreground-rgb));
-//   background: linear-gradient(
-//       to bottom,
-//       transparent,
-//       rgb(var(--background-end-rgb))
-//     )
-//     rgb(var(--background-start-rgb));
+  //   color: rgb(var(--foreground-rgb));
+  //   background: linear-gradient(
+  //       to bottom,
+  //       transparent,
+  //       rgb(var(--background-end-rgb))
+  //     )
+  //     rgb(var(--background-start-rgb));
 }
 
 a {
@@ -110,7 +110,21 @@ a {
 //   }
 // }
 
-.mainContent{
+.mainContent {
   margin-left: 250px;
   padding: 70px 0px;
+}
+.pageContent {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 0px 18px;
+}
+.pageTitle {
+  padding: 20px 0px;
+}
+.sectionHeader {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
