project and user creation form added

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -1,29 +1,29 @@
 .pageFooter {
-  background-color: #f2f2f5;
-  bottom: 0;
-  color: #74788d;
-  height: 60px;
-  left: 250px;
-  padding: 20px 18px;
-  position: absolute;
-  right: 0;
+    background-color: #f2f2f5;
+    bottom: 0;
+    color: #74788d;
+    height: 60px;
+    left: 250px;
+    padding: 20px 18px;
+    position: fixed;
+    right: 0;
 
-  .row {
-    display: flex;
-    flex-wrap: wrap;
+    .row {
+        display: flex;
+        flex-wrap: wrap;
 
-    .copyright {
-      flex: 0 0 auto;
-      width: 50%;
+        .copyright {
+            flex: 0 0 auto;
+            width: 50%;
+        }
+
+        .description {
+            flex: 0 0 auto;
+            width: 50%;
+            .text {
+                text-align: right !important;
+                display: block !important;
+            }
+        }
     }
-
-    .description {
-      flex: 0 0 auto;
-      width: 50%;
-      .text {
-        text-align: right !important;
-        display: block !important;
-      }
-    }
-  }
 }
