projectoverview ui, font, projectslug

--- a/src/components/ProjectForm/projectform.scss
+++ b/src/components/ProjectForm/projectform.scss
@@ -8,6 +8,7 @@
         padding: 1.25rem;
         display: flex;
         flex-direction: column;
+        width: 100%;
         .cardTitle {
             font-weight: 500;
             margin-bottom: 1.5rem;
