--- a/src/app/projects/projects.scss
+++ b/src/app/projects/projects.scss
@@ -34,12 +34,17 @@
                 .userGroup {
                     display: flex;
                     flex-wrap: wrap;
+                    align-items: center;
+                }
+                .userGroup > .userAvatar {
+                    max-height: 36px;
+                    margin: 4px 0px 4px -6px !important;
                 }
                 .userAvatar {
-                    margin: -6px;
                     border: 2px solid #fff;
                     border-radius: 50%;
                     cursor: pointer;
+                    transition: all 0.2s;
                     &:hover {
                         transform: translateY(-2px);
                     }
