minor css changes

--- a/src/app/projects/projects.scss
+++ b/src/app/projects/projects.scss
@@ -5,6 +5,7 @@
         padding: 20px 0px;
     }
     .section {
+        overflow-x: auto;
         table {
             padding: 10px 0px;
             border-spacing: 0px 12px;
