--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -128,6 +128,15 @@ a {
 }
 .sectionHeader {
     display: flex;
+    flex-direction: row;
+
     align-items: center;
     justify-content: space-between;
+}
+
+@media (max-width: 576px) {
+    .sectionHeader {
+        flex-direction: column;
+        align-items: start;
+    }
 }
