--- a/src/app/projects/project-overview/[slug]/projectoverview.scss
+++ b/src/app/projects/project-overview/[slug]/projectoverview.scss
@@ -132,6 +132,7 @@
             box-shadow: 0 0.75rem 1.5rem rgba(18, 38, 63, 0.03);
             background-color: #fff;
             border-radius: 0.375rem;
+            width: 100%;
             .cardBody {
                 display: flex;
                 flex-direction: column;
