sidebar responsive collapsable

--- a/src/components/Sidebar/sidebar.scss
+++ b/src/components/Sidebar/sidebar.scss
@@ -34,22 +34,23 @@
         padding: 0px 20px;
 
         span {
-            padding: 0.625rem 0.5rem;
-            width: 100%;
+            // padding: 0.625rem 0.5rem;
+            flex-grow: 1;
         }
         div {
-            @extend span;
+            // @extend span;
             display: flex;
             justify-content: space-between;
             align-items: center;
         }
         a {
+            // @extend span;
+            padding: 0.625rem 0.5rem;
             display: flex;
-            // justify-content: center;
             align-items: center;
             gap: 5px;
-            a {
-                padding: 0px;
+            i {
+                display: inline-flex;
             }
         }
 
@@ -86,10 +87,68 @@
 .sidebarCollapsed {
     .sidebar {
         width: 70px !important;
+        display: block;
         .menuTitle,
         .menuHeading > a > span {
             display: none;
+            padding-left: 25px;
+            width: 190px;
         }
+        .menuHeading > i {
+            display: none;
+        }
+        .menuContent {
+            padding: 0px;
+            div {
+                padding-left: 0;
+                padding-right: 0;
+            }
+            a {
+                padding: 15px 20px;
+                gap: 0px;
+            }
+            ul {
+                transition: position 0.2s ease;
+            }
+
+            &:hover {
+                position: relative;
+                background-color: #2e3548;
+                transition-delay: 0.3s;
+                a {
+                    background-color: #2e3548;
+                    span {
+                        display: inline;
+                    }
+                }
+                ul {
+                    max-height: 200px;
+                    position: absolute;
+                    // background-color: #2a3042;
+                    padding: 5px 0;
+                    z-index: 999;
+                    box-shadow: 3px 5px 10px 0 rgba(54, 61, 71, 0.1);
+                    left: 70px;
+                    display: block;
+                    height: auto;
+                    width: 190px;
+                    top: 49px;
+
+                    li {
+                        padding: 0px;
+                    }
+                }
+            }
+        }
+    }
+    .mainContent {
+        margin-left: 70px !important;
+    }
+    .pageHeader {
+        left: 70px !important;
+    }
+    .pageFooter {
+        left: 70px !important;
     }
 }
 @media (max-width: 992px) {
@@ -100,9 +159,9 @@
         margin-left: 0px !important;
     }
     .pageHeader {
-        left: 0 !important;
+        left: 0px !important;
     }
     .pageFooter {
-        left: 0 !important;
+        left: 0px !important;
     }
 }
