--- a/src/app/projects/projects.scss
+++ b/src/app/projects/projects.scss
@@ -5,7 +5,6 @@
         padding: 20px 0px;
     }
     .section {
-        overflow-x: auto;
         table {
             padding: 10px 0px;
             border-spacing: 0px 12px;
@@ -87,6 +86,9 @@
                 }
             }
         }
+    }
+    .sectionContent {
+        overflow-x: auto;
     }
     .createButton {
         @include button;
