--- a/src/components/ProjectForm/projectform.scss
+++ b/src/components/ProjectForm/projectform.scss
@@ -71,3 +71,16 @@ select {
     font-family: inherit;
     font-size: inherit;
 }
+
+@media (max-width: 992px) {
+    .formFieldRow {
+        flex-direction: column;
+        label {
+            width: 100% !important;
+            padding: 0px !important;
+        }
+        .formFieldRow > div {
+            width: 100% !important;
+        }
+    }
+}
