tasks list and its routing

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -117,6 +117,7 @@ a {
     margin-left: 250px;
     padding: 70px 0px;
     height: 100vh;
+    height: auto;
 }
 .pageContent {
     display: flex;
