--- a/src/app/projects/projects.scss
+++ b/src/app/projects/projects.scss
@@ -104,6 +104,10 @@
 .danger {
     background-color: #f46a6a;
 }
+.waiting {
+    background-color: #6c757d;
+    color: #74788d;
+}
 
 @keyframes projectOptionsSlide {
     100% {
