--- a/src/app/projects/[slug]/style.scss
+++ b/src/app/projects/[slug]/style.scss
@@ -1,8 +1,56 @@
-@import '../../../users/agents.scss';
+@import '../../users/agents.scss';
 
 .pageContent {
     .pageTitle {
         padding: 20px 0px;
+    }
+    table {
+        border-spacing: unset;
+        border-collapse: collapse;
+        tr {
+            border-bottom: 1px solid #f6f6f6;
+            td {
+                border-bottom-width: 1px;
+            }
+        }
+    }
+    .showMore {
+        display: flex;
+        justify-content: flex-end;
+        color: #556ee6;
+        font-size: 13px;
+        padding: 0.75rem;
+
+        a {
+            display: flex;
+            align-items: center;
+        }
+    }
+    .card {
+        display: flex;
+        flex-direction: column;
+        box-shadow: 0 0.75rem 1.5rem rgba(18, 38, 63, 0.03);
+        background-color: #fff;
+        border-radius: 0.375rem;
+        width: 100%;
+        .cardBody {
+            display: flex;
+            flex-direction: column;
+            padding: 1.25rem;
+            gap: 10px;
+            .cardTitle {
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+            }
+            h5 {
+                font-size: 15px;
+                font-weight: 500;
+            }
+            p {
+                color: #74788d;
+            }
+        }
     }
     .sectionProjectOverview {
         display: flex;
@@ -15,31 +63,9 @@
             flex: 1;
         }
         .card {
-            display: flex;
-            flex-direction: column;
-            box-shadow: 0 0.75rem 1.5rem rgba(18, 38, 63, 0.03);
-            background-color: #fff;
-            border-radius: 0.375rem;
-            width: 100%;
             .cardBody {
-                display: flex;
-                flex-direction: column;
-                padding: 1.25rem;
-
-                .cardTitle {
-                    display: flex;
-                    flex-direction: column;
-                    gap: 10px;
-                }
                 .projectDuration {
                     display: flex;
-                }
-                h5 {
-                    font-size: 15px;
-                    font-weight: 500;
-                }
-                p {
-                    color: #74788d;
                 }
                 .date {
                     width: 200px;
@@ -52,17 +78,6 @@
                         gap: 5px;
                     }
                 }
-
-                table {
-                    tr {
-                        td {
-                            border-bottom-width: 1px;
-                        }
-                    }
-                }
-            }
-            table {
-                border-spacing: unset;
             }
         }
         .projectCard {
@@ -78,7 +93,6 @@
         }
         .teamCard {
             table {
-                border-collapse: collapse;
                 tr {
                     border-bottom: 1px solid #f6f6f6;
                     td:first-child {
@@ -96,5 +110,8 @@
                 }
             }
         }
+    }
+    .sectionTaskList {
+        display: flex;
     }
 }
