minor responsive fix

--- a/src/app/projects/[slug]/style.scss
+++ b/src/app/projects/[slug]/style.scss
@@ -131,5 +131,14 @@
       color: #888; /* Adjust the color to your preference */
       padding: 20px;
     }
+    @media (max-width: 576px) {
+      .taskCardTitle {
+        flex-direction: column !important;
+        align-items: start;
+      }
+      .taskCardContent {
+        overflow-x: auto;
+      }
+    }
   }
 }
