--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -49,6 +49,12 @@ a {
 .sectionContent {
   flex-grow: 1;
 }
+.noData {
+  text-align: center;
+  font-size: 16px;
+  color: #888; /* Adjust the color to your preference */
+  padding: 20px;
+}
 
 @media (max-width: 576px) {
   .sectionHeader {
