--- a/src/app/projects/[projectId]/style.scss
+++ b/src/app/projects/[projectId]/style.scss
@@ -52,9 +52,12 @@
       }
     }
   }
+  .section {
+    gap: 1rem;
+  }
   .sectionProjectOverview {
     display: flex;
-    gap: 1rem;
+    // gap: 1rem;
     flex-wrap: wrap;
     .projectCard {
       flex: 2;
