implemented vercel postgres & nextjs server actions

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -105,3 +105,10 @@ a {
     font-size: 13px;
   }
 }
+.userAvatar {
+  display: flex;
+  img {
+    // border: 2px solid #fff;
+    border-radius: 50%;
+  }
+}
