--- a/src/components/Sidebar/sidebar.scss
+++ b/src/components/Sidebar/sidebar.scss
@@ -45,6 +45,12 @@
     flex-direction: column;
     padding: 0px 20px;
 
+    .menuHeading {
+      div {
+        padding: 0.625rem 0.5rem;
+        gap: 5px;
+      }
+    }
     span {
       // padding: 0.625rem 0.5rem;
       flex-grow: 1;
@@ -62,9 +68,9 @@
       display: flex;
       align-items: center;
       gap: 5px;
-      i {
-        display: inline-flex;
-      }
+    }
+    i {
+      display: inline-flex;
     }
 
     ul {
@@ -109,7 +115,8 @@
       display: none !important;
     }
     .menuTitle,
-    .menuHeading > a > span {
+    .menuHeading > a > span,
+    .menuHeading > div > span {
       display: none;
       padding-left: 25px;
       width: 190px;
@@ -119,6 +126,12 @@
     }
     .menuContent {
       padding: 0px;
+      .menuHeading {
+        div {
+          padding: 15px 20px;
+          gap: 0px;
+        }
+      }
       div {
         padding-left: 0;
         padding-right: 0;
@@ -135,7 +148,8 @@
         position: relative;
         background-color: #2e3548;
         transition-delay: 0.3s;
-        a {
+        a,
+        div {
           background-color: #2e3548;
           span {
             display: inline;
